--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -52,5 +52,5 @@ jobs:
     - name: Terraform Apply
       run: terraform apply -auto-approve
 
-    - name: Terraform Destroy
-      run: terraform destroy -auto-approve
+    #- name: Terraform Destroy
+    # run: terraform destroy -auto-approve
